# aga

./: .flake8  .gitignore  .readthedocs.yml  LICENSE.md  README.md  core.py  counts.py  coverage.xml  noxfile.py  pyproject.toml  test.sh  tmp.py
.github/workflows/: coverage.yml  lints.yml  release.yml  tests.yml
core/: __init__.py  case.py  problem.py
core/tests/: test_problem.py
docs/: advanced.md  cli.md  conf.py  config.md  development.md  index.md  injection.md  reference.md  requirements.txt  score.md  tutorial.md
examples/: aga.toml  expect_return_val_func.py  func_with_stdout.py  injection_support.py  input_and_expect_output_script.py  inputs_for_test_cases.py  pipeline.py
examples/aga_injection/: jims_prize_function.py
src/aga/: __init__.py  checks.py  cli.py  config.py  core.py  defaults.toml  loader.py  prize.py  runner.py  score.py  util.py  weight.py
src/aga/cli/: __init__.py  app.py  runner.py  ui.py
src/aga/core/: __init__.py  context.py  environment.py  parameter.py  problem.py  suite.py  utils.py
src/aga/gradescope/: __init__.py  into_zip.py  main.py  metadata.py  runner.py  schema.py
src/aga/gradescope/resources/: __init__.py  run_autograder  setup-311.sh  setup.py  setup.sh
tests/: __init__.py  conftest.py  square.py  test_checks.py  test_cli.py  test_config.py  test_core.py  test_core_utils.py  test_e2e.py  test_gradescope.py  test_loader.py  test_metadata.py  test_problem.py  test_runner.py  test_score.py  test_test_suite.py  test_util.py
tests/resources/: aga.toml
tests/test_gradescope/: conftest.py  test_injection.py  test_into_zip.py  test_main.py  test_metadata.py
tests/test_gradescope/resources/: example_metadata.json  metadata_with_late_due_date.json  multiple_submission_metadata.json
tests/test_gradescope/resources/aga_injection/: mock_injection.py
tests/test_gradescope/resources/injection_dir_2/: injection_dir_file_2.py
