[tool.poetry]
name = "aga"
version = "0.2.0"
description = "aga grades assignments"
authors = ["Riley Shahar <riley.shahar@gmail.com>"]
readme = "README.md"
homepage = "https://github.com/nihilistkitten/aga"
repository = "https://github.com/nihilistkitten/aga"

[tool.poetry.dependencies]
python = "^3.6.1"
dill = "^0.3.4"
gradescope-utils = "^0.4.0"
importlib-resources = "^5.2.2"
typer = "^0.4.0"

[tool.poetry.dev-dependencies]
coverage = {extras = ["toml"], version = "^5.5"}
flake8 = "^3.9.2"
flake8-black = "^0.2.3"
flake8-bugbear = "^21.9.1"
mypy = "^0.910"
mypy-ls = "^0.5.1"
nox = "^2021.6.12"
nox-poetry = "^0.8.6"
pydocstyle = "^6.1.1"
pyls-flake8 = "^0.4.0"
pyls-isort = "^0.2.2"
pytest = "^6.2.5"
pytest-cov = "^2.12.1"
python-lsp-black = "^1.0.0"
python-lsp-server = {extras = ["mccabe", "pydocstyle", "flake8"], version = "^1.2.2"}
pytest-lazy-fixture = "^0.6.3"
pytest-mock = "^3.6.1"

[tool.poetry.scripts]
aga = "aga.cli:app"

[tool.pytest.ini_options]
filterwarnings = ["ignore:'autocompletion' is renamed to 'shell_complete':DeprecationWarning"]

[tool.coverage.paths]
source = ["src", "*/site-packages"]

[tool.coverage.run]
branch = true
source = ["aga"]

[tool.coverage.report]
show_missing = true

[tool.mypy]
mypy_path = "src"
strict = true

[tool.pylint.MASTER]
disable = ["no-else-return"]

[tool.pylint.format]
max-line-length = 88
good-names = ["i", "j", "k", "s", "x", "y", "_"]

[tool.pydocstyle]
convention = "numpy"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
